Switch to a tan pallete

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
   <head>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=DM Sans">
     <link rel="stylesheet" href="style.css"/>
     <title>Sustainable Development Goals</title>
   </head>
@@ -25,7 +26,9 @@
       shared commitment to a better future.
 
       <br><br>
-      <a href="https://sdgs.un.org/">Explore UN SDGs</a>
+      <center>
+        <a href="https://sdgs.un.org/">Explore UN SDGs</a>
+      </center>
     </p>
     <br>
 
@@ -38,7 +41,9 @@
       bring you the most up-to-date and relevant information.
 
       <br><br>
-      <a href="https://www.nature.com/nclimate/">Read Latest Research</a>
+      <center>
+        <a href="https://www.nature.com/nclimate/">Read Latest Research</a>
+      </center>
     </p>
     <br>
 
@@ -51,7 +56,9 @@
       face and the actions being taken to address them.
 
       <br><br>
-      <a href="https://www.ted.com/topics/climate-change">Watch TED Talks</a>
+      <center>
+        <a href="https://www.ted.com/topics/climate-change">Watch TED Talks</a>
+      </center>
     </p>
     <br>
 
@@ -64,7 +71,9 @@
       and driving positive change on a global scale.
 
       <br><br>
-      <a href="https://www.ipcc.ch/">Learn from IPCC</a>
+      <center>
+        <a href="https://www.ipcc.ch/">Learn from IPCC</a>
+      </center>
     </p>
     <br>
 
@@ -76,7 +85,9 @@
       for monitoring the health of our planet&#39;s vital forests.
 
       <br><br>
-      <a href="https://www.climateinteractive.org/">Explore Climate Interactive</a>
+      <center>
+        <a href="https://www.climateinteractive.org/">Explore Climate Interactive</a>
+      </center>
     </p>
     <br>
 
@@ -88,11 +99,13 @@
       relevant information to keep you informed and engaged.
 
       <br><br>
-      <a href="https://www.climateaction.org/news">Read Climate Action News</a>
+      <center>
+        <a href="https://www.climateaction.org/news">Read Climate Action News</a>
+      </center>
     </p>
     <br>
 
-    <h2>To The Future</h2>
+    <h2>To the Future</h2>
     <p>
       Thank you for joining us on this journey toward a more sustainable
       future. Together, we can turn knowledge into action and create positive
